--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -405,16 +405,16 @@ a:hover {
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 48px;
-  font-weight: 700;
+  font-weight: 10;
   line-height: 56px;
-  text-transform: uppercase;
   color: #fff;
 }
 
 #hero h2 {
   color: #eee;
   margin-bottom: 40px;
-  font-size: 24px;
+  font-size: 26px;
+  font-weight: 200
 }
 
 #hero .btn-get-started {
@@ -425,7 +425,7 @@ a:hover {
   letter-spacing: 1px;
   display: inline-block;
   padding: 8px 30px 9px 30px;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: 0.5s;
   color: #fff;
 }
