--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -68,7 +68,8 @@ a:hover {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
+  margin-bottom: 8px;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
