--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -354,13 +354,14 @@ a:hover {
 #hero {
   width: 100%;
   height: 90vh;
-  background:url("../../images/iStock-916475400-min.jpg");
+  background:url("../../images/WhatsApp Image 2020-06-10 at 15.50.21.jpeg");
   background-size: cover;
   position: relative;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
 }
+
 
 
 
