--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -69,7 +69,7 @@ a:hover {
 
 #header .logo img {
   max-height: 60px;
-  margin-bottom: 8px;
+  margin-bottom: -4px;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
@@ -111,7 +111,7 @@ a:hover {
   padding: 10px 0 10px 25px;
   color: #06aed5;
   text-decoration: none;
-
+text-transform: capitalize;
 }
 
 .nav-menu a {
@@ -544,7 +544,6 @@ section {
 # Services section
 --------------------------------------------------------------*/
 #symbols{
-  margin: none;
   padding-right: 10px;
   background-color: #F7F7F7;
 }
@@ -708,17 +707,27 @@ section {
 margin-top: -50px;
 }
 .display-4 , .lead{
-  color: #27bbdd;
+  text-align: center;
+}
+.lead{
+  width: 50%;
+  margin-left: 25%;
 }
 .Arrow{
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  float: right;
+  margin-top: 5%;
 }
-@media (min-width: 1024px) {
+.border{
+  display: block;
+  width: 80%;
+  height: 3px;
+  background: #cfcfcf;
+  margin: 20px auto;
+}
+
+@media (min-width: 768px) {
   .Arrow {
-    float: none;
-    padding-right: 800px;
+    margin-top:-2%;
+    margin-left: 6%;
   }
 }
 /*--------------------------------------------------------------
@@ -726,24 +735,145 @@ margin-top: -50px;
 --------------------------------------------------------------*/
 .search{
   display: inline;
+
+}
+.padding-drop{
+  display: inline-block;
+  background-color: #F7F7F7;
+  padding: 15px;
+  width: 75%;
+  margin: 7%;
+  justify-content: space-around;
+}
+
+.btn-secondary{
+  background-color: #6c757d00;
+  border-color: #59cee8;
+}
+#repeat{
+  border: none;
 }
 #searchContainer{
-  margin-left: 12%;
   margin-top: -125px;
 }
+
+@media (min-width: 475px) {
+  .padding-drop{
+    display: inline-flex;
+    left: 5%;
+
+}
+}
+
 @media (min-width: 768px) {
   #searchContainer {
     margin-top: -215px;
-    margin-left: 5%;
 
   }
+
 }
-@media (min-width: 1024px) {
-  #searchContainer {
-    margin-top: -215px;
-    margin-left: 12%;
+/*--------------------------------------------------------------
+# search results
+--------------------------------------------------------------*/
+.container{
+  width: 100%;
+}
 
+.bg {
+  position: absolute;
+	display: inline-block;
+	height:90px;
+	color: darkgrey;
+	background: white;
+	padding: 5px 10px;
+	border-radius: 5px;
+	font-size: 1em;
+	width: 15%;
+  margin: 7%;
+  margin-left: 77%;
+}
+.date, .date2{
+	margin-left: 1px;
+	text-align: center;
+	width: 25px;
+	border-bottom: 2px solid #1584ec;
+}
+.date2{
+  	font-size: 21px;
+}
+.date, .date2, .date3{
+  text-align: center;
+}
+.date3{
+  	margin-right: 1px;
+
+	margin-left: 1px;
+		font-size: 14px;
+}
+.date{
+	font-size: 14px;
+}
+#results .container .card{
+  background-color: transparent !important;
+  display: inline-block;
+  justify-content: space-between;
+  border: 1px solid #e9e9e9 !important;
+  width: 18rem;
+  margin-bottom: 10%;
+}
+#results .card .card-img-top{
+  padding:5%;
+  border-radius: 20px 20px 0px 0px;
+  -moz-border-radius: 20px 20px 0px 0px;
+  -webkit-border-radius: 20px 20px 0px 0px;
+}
+.card-body{
+  padding-right: 10%;
+  padding-left: 10%;
+}
+.kind{
+  color: grey;
+}
+.age{
+  color:grey;
+}
+.fa-venus{
+  color: lightpink;
+}
+.fa-mars{
+  color: lightblue
+}
+
+.btn-primary{
+  background-color: transparent;
+  color: blue;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (min-width: 375px) {
+  .center-results{
+    margin-left: 10%
   }
+
+}
+@media (min-width: 768px) {
+#results .container .card{
+      margin-right: 1%
+  }
+
+}
+@media (min-width: 1000px) {
+  .center-results{
+    margin-left: 7%
+  }
+
+}
+@media (min-width: 1200px) {
+  .center-results{
+    margin-left: 18%
+  }
+
 }
 /*--------------------------------------------------------------
 # Features
