--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -950,9 +950,75 @@ background: #707070;
 --------------------------------------------------------------*/
 .line{
     width: 80%;
-    border-bottom: 1px solid black;
+    border-bottom: 3px solid #cfcfcf;
     margin-top: 50px;
     margin-left: 10%;
+}
+.testimonials-response{
+  margin: 10%;
+	display: flex;
+	justify-content: space-between;
+}
+
+ .wrapper {
+
+	 width: 320px;
+	 height: 500px;
+	 background: #fdfeff;
+	 border-radius: 10px;
+	 padding: 20px 20px 20px 20px;
+	 box-shadow: 0 8px 40px rgba(0, 0, 0, .2);
+}
+ .wrapper .profile {
+	 position: relative;
+}
+
+
+ .wrapper .profile .thumbnail {
+	 width: 124px;
+	 height: 124px;
+	 display: flex;
+	 margin-left: auto;
+	 margin-right: auto;
+	 margin-bottom: 1.5em;
+	 border-radius: 100%;
+	 box-shadow: 0 13px 26px rgba(0, 0, 0, .2), 0 3px 6px rgba(0, 0, 0, .2);
+}
+ .wrapper .profile .name {
+	 color: lightblue;
+	 font-size: 24px;
+	 font-weight: 600;
+	 text-align: center;
+}
+ .wrapper .profile .title {
+	 color: lightblue;
+	 font-size: 0.75em;
+	 font-weight: 300;
+	 text-align: center;
+	 padding-top: 0.5em;
+	 padding-bottom: 0.7em;
+	 letter-spacing: 1.5px;
+	 text-transform: uppercase;
+}
+ .wrapper .profile .description {
+	 color: #080911;
+	 font-size: 16px;
+	 font-weight: 300;
+	 text-align: center;
+	 width: 50%;
+	 margin-left:25%;
+	 margin-right:25%;
+
+}
+.quote{
+	text-align: center;
+	font-size:50px;
+	color: lightblue;
+}
+#testimonials .center img{
+  margin-top: 3%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 /*--------------------------------------------------------------
 # Portfolio
