--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -255,7 +255,7 @@ text-transform: capitalize;
  {
   position: fixed;
   right: 15px;
-  top: 5px;
+  top: 15px;
   z-index: 9998;
   border: 0;
   background: none;
@@ -982,7 +982,6 @@ background: #707070;
 	 margin-right: auto;
 	 margin-bottom: 1.5em;
 	 border-radius: 100%;
-	 box-shadow: 0 13px 26px rgba(0, 0, 0, .2), 0 3px 6px rgba(0, 0, 0, .2);
 }
  .wrapper .profile .name {
 	 color: lightblue;
@@ -1008,11 +1007,12 @@ background: #707070;
 	 width: 50%;
 	 margin-left:25%;
 	 margin-right:25%;
+   margin-bottom: 0px;
 
 }
 .quote{
 	text-align: center;
-	font-size:50px;
+	font-size:100px;
 	color: lightblue;
 }
 #testimonials .center img{
@@ -1020,114 +1020,141 @@ background: #707070;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
+.carousel-item.active {
+    display: flex !important;
+  }
+  .carousel-item-next, .carousel-item-prev, .carousel-item.active {
+    display: none;
+  }
+
+  .height-testimonials{
+    height: 500px;
+  }
 /*--------------------------------------------------------------
-# Portfolio
+# subscribe
 --------------------------------------------------------------*/
-.portfolio #portfolio-flters {
-  padding: 0;
-  margin: 0 auto 25px auto;
-  list-style: none;
-  text-align: center;
-  border-radius: 50px;
+
+
+ #wrapper {
+	 position: relative;
+	 margin-top: 30px;
+	 left: 0;
+	 width: 100%;
+}
+ #subscribe {
+   width: 100%;
+	 padding: 3%;
+	 height: 560px;
+	 overflow: hidden;
+}
+ .information-column {
+	 width: 40%;
+	 height: 100%;
+	 overflow: hidden;
+	 float: left;
+	 position: relative;
+	 background-image: url('https://www.datingsitekiezen.nl/wp-content/uploads/2017/08/dating-belgie.jpg');
+	 background-repeat: no-repeat;
+	 background-position: center;
+	 background-size: cover;
+}
+ .content {
+	 width: 100%;
+	 height: 100%;
+	 padding: 30px;
 }
 
-.portfolio #portfolio-flters li {
-  cursor: pointer;
-  display: inline-block;
-  padding: 7px 17px 9px 17px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1;
-  color: #444444;
-  margin: 0 3px 10px 3px;
-  transition: all ease-in-out 0.3s;
-  background: #ede9e9;
-  border-radius: 50px;
+ .form-column {
+	 width: 60%;
+	 height: 100%;
+	 padding: 15px;
+	 float: right;
+background-color: #F7F7F7;
+}
+.form-column h2{
+  color: #01add3;
+  padding-bottom: 20px;
+}
+.form-column p{
+  color: grey;
+
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #fff;
-  background: #e43c5c;
+ .form {
+	 width: 100%;
+	 opacity: 0;
 }
-
-.portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
+ .form {
+	 opacity: 1;
 }
-
-.portfolio .portfolio-item {
-  margin-bottom: 30px;
-  overflow: hidden;
+ .form label {
+	 display: block;
+	 width: 100%;
+	 font-size: 0.6em;
+	 text-transform: uppercase;
+	 letter-spacing: 1px;
 }
-
-.portfolio .portfolio-item img {
-  position: relative;
-  top: 0;
-  transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+ .form input {
+	 width: 85%;
+	 padding: 8px;
+	 border: none;
+	 background: none;
+	 border: 1.5px solid lightblue;
+   -webkit-border-radius: 4px;
+	 -moz-border-radius: 4px;
+	 -ms-border-radius: 4px;
+	 border-radius: 7.5px;
+	 margin-bottom: 12px;
+	 letter-spacing: 1px;
 }
-
-.portfolio .portfolio-item .portfolio-info {
-  opacity: 0;
-  position: absolute;
-  left: 15px;
-  right: 15px;
-  bottom: -50px;
-  z-index: 3;
-  transition: all ease-in-out 0.3s;
-  background: #e43c5c;
-  padding: 15px 20px;
+ .payment {
+	 margin-top: 12px;
 }
-
-.portfolio .portfolio-item .portfolio-info h4 {
-  font-size: 18px;
-  color: #fff;
-  font-weight: 600;
+ .subscribe-btn {
+	 float: left;
+	 margin-right: 4%;
+	 margin: 15px;
+	 padding: 10px;
+	 text-align: center;
+	 color: #ffffff;
+	 -webkit-border-radius: 4px;
+	 -moz-border-radius: 4px;
+	 -ms-border-radius: 4px;
+	 border-radius: 4px;
+	 border: none;
+	 cursor: pointer;
+   background:linear-gradient(to bottom, #01add3 5%, #6dd5ed 100%);
+  background-color:#01add3;
+   text-shadow: none;
+   padding-left: 15px;
+   padding-right: 15px;
 }
-
-.portfolio .portfolio-item .portfolio-info p {
-  color: #fff;
-  font-size: 14px;
-  margin-bottom: 0;
+ .subscribe-btn i {
+	 margin-left: 8px;
 }
-
-.portfolio .portfolio-item .portfolio-info .preview-link, .portfolio .portfolio-item .portfolio-info .details-link {
-  position: absolute;
-  right: 50px;
-  font-size: 24px;
-  top: calc(50% - 18px);
-  color: white;
-  transition: ease-in-out 0.3s;
-}
-
-.portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #f7c2cc;
-}
-
-.portfolio .portfolio-item .portfolio-info .details-link {
-  right: 15px;
-}
-
-.portfolio .portfolio-item:hover img {
-  top: -30px;
-}
-
-.portfolio .portfolio-item:hover .portfolio-info {
-  opacity: 1;
-  bottom: 0;
-}
-
 /*--------------------------------------------------------------
-# Pricing
+# giftcard
 --------------------------------------------------------------*/
-.pricing .box {
-  padding: 20px;
-  background: #f9f9f9;
-  text-align: center;
-  border-radius: 8px;
-  position: relative;
-  overflow: hidden;
-  border: 2px solid #f9f9f9;
+.gift {
+  padding: 3%
 }
-
+.background-gift{
+  background-color: #F7F7F7;
+  height: 100%;
+}
+.padding-gift{
+  padding-top: 100px;
+}
+.gift-title{
+  font-size: 32px;
+  color: #01add3;
+  text-align: left;
+  padding-top: 50%;
+  margin-left: 0%;
+}
+.background-gift .col-md-8 .card-body p{
+color: grey;
+}
 .pricing .box h3 {
   font-weight: 400;
   padding: 15px;
@@ -1229,6 +1256,14 @@ background: #707070;
   background: #fce6ea;
   color: #e43c5c;
   border-radius: 50px;
+}
+.card-img{
+  height: 100%;
+  width: 100%;
+  background:url("../../images/1 (1).png");
+  background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 /*--------------------------------------------------------------
