--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -367,7 +367,7 @@ text-transform: capitalize;
 #hero {
   width: 100%;
   height: 90vh;
-  background:url("../../images/WhatsApp Image 2020-06-10 at 15.50.21.jpeg");
+  background:url("../../images/IMG_5176.jpg");
   background-size: cover;
   position: relative;
   background-attachment: fixed;
@@ -428,9 +428,9 @@ text-transform: capitalize;
 }
 
 #hero h2 {
+  font-family: arial;
   padding-top: 20px;
   color: #eee;
-  margin-bottom: 30px;
   font-size: 26px;
   font-weight: 100;
   letter-spacing: 0.1em;
@@ -582,150 +582,23 @@ section {
 }
 
 /*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
-.about .content h3 {
-  font-weight: 600;
-  font-size: 26px;
-}
-
-.about .content ul {
-  list-style: none;
-  padding: 0;
-}
-
-.about .content ul li {
-  padding-left: 28px;
-  position: relative;
-}
-
-.about .content ul li + li {
-  margin-top: 10px;
-}
-
-.about .content ul i {
-  position: absolute;
-  left: 0;
-  top: 2px;
-  font-size: 20px;
-  color: #e43c5c;
-  line-height: 1;
-}
-
-.about .content p:last-child {
-  margin-bottom: 0;
-}
-
-.about .content .btn-learn-more {
-  font-family: "Nunito", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 12px 32px;
-  border-radius: 50px;
-  transition: 0.3s;
-  line-height: 1;
-  color: #e43c5c;
-  -webkit-animation-delay: 0.8s;
-  animation-delay: 0.8s;
-  margin-top: 6px;
-  border: 2px solid #e43c5c;
-}
-
-.about .content .btn-learn-more:hover {
-  background: #e43c5c;
-  color: #fff;
-  text-decoration: none;
-}
-
-/*--------------------------------------------------------------
-# Services
---------------------------------------------------------------*/
-.services {
-  padding-bottom: 30px;
-}
-
-.services .icon-box {
-  padding: 60px 30px;
-  position: relative;
-  overflow: hidden;
-  background: #fff;
-  box-shadow: 2px 0 35px 0 rgba(68, 88, 144, 0.12);
-  transition: all 0.3s ease-in-out;
-  border-radius: 8px;
-  z-index: 1;
-  text-align: center;
-}
-
-.services .icon-box::before {
-  content: '';
-  position: absolute;
-  background: #fdeff2;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  top: 100%;
-  transition: all 0.4s;
-  z-index: -1;
-}
-
-.services .icon-box:hover::before {
-  background: #e43c5c;
-  top: 0;
-  border-radius: 0px;
-}
-
-.services .icon {
-  margin-bottom: 15px;
-}
-
-.services .icon i {
-  font-size: 48px;
-  line-height: 1;
-  color: #e43c5c;
-  transition: all 0.3s ease-in-out;
-}
-
-.services .title {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-
-.services .title a {
-  color: #111;
-}
-
-.services .description {
-  font-size: 15px;
-  line-height: 28px;
-  margin-bottom: 0;
-}
-
-.services .icon-box:hover .title a, .services .icon-box:hover .description {
-  color: #fff;
-}
-
-.services .icon-box:hover .icon i {
-  color: #fff;
-}
-/*--------------------------------------------------------------
 # Evenementen
 --------------------------------------------------------------*/
+.event-title{
+  color: #01add3;
+}
 .jumbotron{
   background-color: #ffff !important;
 margin-top: -50px;
 }
 .display-4 , .lead{
-  text-align: center;
+  text-align: left;
 }
-.lead{
-  width: 50%;
-  margin-left: 25%;
-}
+
 .Arrow{
   margin-top: 5%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 .border{
   display: block;
@@ -746,7 +619,6 @@ margin-top: -50px;
 --------------------------------------------------------------*/
 .search{
   display: inline;
-
 }
 .padding-drop{
   display: inline-block;
@@ -760,6 +632,8 @@ margin-top: -50px;
 .btn-secondary{
   background-color: #6c757d00;
   border-color: #59cee8;
+  width: inherit;
+  margin-left: inherit;
 }
 #repeat{
   border: none;
@@ -829,37 +703,55 @@ margin-top: -50px;
   display: inline-block;
   justify-content: space-between;
   border: 1px solid #e9e9e9 !important;
-  width: 17rem;
+  width: 18rem;
   margin-bottom: 10%;
-}
-#results .card .card-img-top{
-  padding:5%;
   border-radius: 20px 20px 0px 0px;
-  -moz-border-radius: 20px 20px 0px 0px;
-  -webkit-border-radius: 20px 20px 0px 0px;
+ -moz-border-radius: 20px 20px 0px 0px;
+ -webkit-border-radius: 20px 20px 0px 0px;
 }
 .card-body{
   padding-right: 10%;
   padding-left: 10%;
 }
-.kind{
-  color: grey;
-}
+
 .age{
-  color:grey;
-}
+  padding-top: 15px;
+    color:black;
+  }
+  .float{
+    color: #29bcdc;
+    float: right;
+  }
+  .results-body{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 .fa-venus{
   color: lightpink;
 }
 .fa-mars{
   color: lightblue
 }
+.fa-user-plus{
+  color: lightblue
+}
 
 .btn-primary{
+  float: right;
   background-color: transparent;
-  color: blue;
-  padding-left: 20px;
-  padding-right: 20px;
+  color: #29bcdc;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-color: #29bcdc;
+}
+.btn-primary:hover{
+  background-color: #29bcdc;
+  background: linear-gradient(to bottom, #01add3 5%, #6dd5ed 100%);
+  background-color: #01add3;
+}
+.results-title{
+  text-align: left;
+  margin-left: 0%;
 }
 .more-results{
   color: #01add3;
@@ -915,6 +807,13 @@ cursor: pointer;
 	top: auto;
   bottom: -40px;
 
+}
+.as-seen-img-mobile{
+  max-width: none !important;
+  width: 50px;
+}
+.humom{
+  padding-left: 50px;
 }
 
 .flair, .humo{
@@ -984,7 +883,7 @@ background: #707070;
 	 border-radius: 100%;
 }
  .wrapper .profile .name {
-	 color: lightblue;
+	 color: #28bbdc;
 	 font-size: 24px;
 	 font-weight: 600;
 	 text-align: center;
@@ -1013,7 +912,7 @@ background: #707070;
 .quote{
 	text-align: center;
 	font-size:100px;
-	color: lightblue;
+	color: #28bbdc;
 }
 #testimonials .center img{
   margin-top: 3%;
@@ -1053,9 +952,9 @@ background: #707070;
 	 overflow: hidden;
 	 float: left;
 	 position: relative;
-	 background-image: url('https://www.datingsitekiezen.nl/wp-content/uploads/2017/08/dating-belgie.jpg');
+	 background-image: url('../../images/iStock-92021632.jpg');
 	 background-repeat: no-repeat;
-	 background-position: center;
+	 background-position: right;
 	 background-size: cover;
 }
  .content {
@@ -1090,9 +989,7 @@ background-color: #F7F7F7;
  .form label {
 	 display: block;
 	 width: 100%;
-	 font-size: 0.6em;
-	 text-transform: uppercase;
-	 letter-spacing: 1px;
+
 }
  .form input {
 	 width: 85%;
@@ -1104,8 +1001,14 @@ background-color: #F7F7F7;
 	 -moz-border-radius: 4px;
 	 -ms-border-radius: 4px;
 	 border-radius: 7.5px;
-	 margin-bottom: 12px;
+	 margin-bottom: 10px;
 	 letter-spacing: 1px;
+}
+.newsletter-title{
+  font-size: 1.5rem;
+}
+.checkbox{
+  width: 7% !important;
 }
  .payment {
 	 margin-top: 12px;
@@ -1146,11 +1049,13 @@ background-color: #F7F7F7;
   padding-top: 100px;
 }
 .gift-title{
-  font-size: 32px;
+  font-size: 30px;
   color: #01add3;
   text-align: left;
   padding-top: 50%;
   margin-left: 0%;
+  margin-top: -70px;
+  margin-bottom: 50px;
 }
 .background-gift .col-md-8 .card-body p{
 color: grey;
@@ -1265,7 +1170,37 @@ color: grey;
     background-position: center;
     background-size: cover;
 }
+/*--------------------------------------------------------------
+# footer
+--------------------------------------------------------------*/
+.image-position{
+  max-height: 460px;
+  max-width: 100%;
+  overflow: hidden;
+}
+.footer-image{
+  margin-top: 420px;
+  max-width: none;
+  width: max-content;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
 
+@media (min-width: 768px) {
+  .footer-image{
+    margin-top: 0px;
+  }
+
+
+}
+@media (min-width: 1600px) {
+  .footer-image{
+width: 100%;
+ }
+
+
+}
 /*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
@@ -1592,545 +1527,6 @@ color: grey;
   padding-right: 10px;
   color: #655356;
   content: "/";
-}
-
-
-/*--------------------------------------------------------------
-# Blog
---------------------------------------------------------------*/
-.blog {
-  padding: 40px 0 20px 0;
-}
-
-.blog .entry {
-  padding: 20px;
-  margin-bottom: 60px;
-  overflow: hidden;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-}
-
-.blog .entry .entry-img {
-  max-height: 400px;
-  margin: -20px -20px 20px -20px;
-  overflow: hidden;
-}
-
-.blog .entry .entry-title {
-  font-size: 20px;
-  line-height: 26px;
-  font-weight: bold;
-  padding: 0;
-  margin: 0 0 20px 0;
-}
-
-.blog .entry .entry-title a {
-  color: #493c3e;
-  transition: 0.3s;
-}
-
-.blog .entry .entry-title a:hover {
-  color: #e43c5c;
-}
-
-.blog .entry .entry-meta {
-  color: #9a8487;
-}
-
-.blog .entry .entry-meta ul {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.blog .entry .entry-meta ul li {
-  margin-bottom: 15px;
-}
-
-.blog .entry .entry-meta ul li + li {
-  padding-left: 15px;
-}
-
-.blog .entry .entry-meta i {
-  font-size: 14px;
-  padding-right: 4px;
-}
-
-.blog .entry .entry-meta a {
-  color: #9a8487;
-  font-size: 14px;
-  display: inline-block;
-  line-height: 1;
-}
-
-.blog .entry .entry-content p {
-  line-height: 24px;
-  font-size: 15px;
-}
-
-.blog .entry .entry-content .read-more {
-  -moz-text-align-last: right;
-  text-align-last: right;
-}
-
-.blog .entry .entry-content .read-more a {
-  display: inline-block;
-  background: #e43c5c;
-  color: #fff;
-  padding: 5px 20px 7px 20px;
-  transition: 0.3s;
-  font-size: 14px;
-  border-radius: 50px;
-}
-
-.blog .entry .entry-content .read-more a:hover {
-  background: #d01d3f;
-}
-
-.blog .entry .entry-content h3 {
-  font-size: 22px;
-  margin-top: 30px;
-  font-weight: bold;
-}
-
-.blog .entry .entry-content blockquote {
-  overflow: hidden;
-  background-color: #fafafa;
-  padding: 60px;
-  position: relative;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.blog .entry .entry-content blockquote p {
-  color: #444444;
-  line-height: 1.6;
-  margin-bottom: 0;
-  font-style: italic;
-  font-weight: 500;
-  font-size: 22px;
-}
-
-.blog .entry .entry-content blockquote .quote-left {
-  position: absolute;
-  left: 20px;
-  top: 20px;
-  font-size: 36px;
-  color: #e7e7e7;
-}
-
-.blog .entry .entry-content blockquote .quote-right {
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-  font-size: 36px;
-  color: #e7e7e7;
-}
-
-.blog .entry .entry-content blockquote::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 3px;
-  background-color: #493c3e;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.blog .entry .entry-footer {
-  padding-top: 10px;
-  border-top: 1px solid #e6e6e6;
-}
-
-.blog .entry .entry-footer i {
-  color: #9a8487;
-  display: inline;
-}
-
-.blog .entry .entry-footer a {
-  color: #c3b6b8;
-  transition: 0.3s;
-}
-
-.blog .entry .entry-footer a:hover {
-  color: #e43c5c;
-}
-
-.blog .entry .entry-footer .cats {
-  list-style: none;
-  display: inline;
-  padding: 0 20px 0 0;
-  font-size: 14px;
-}
-
-.blog .entry .entry-footer .cats li {
-  display: inline-block;
-}
-
-.blog .entry .entry-footer .tags {
-  list-style: none;
-  display: inline;
-  padding: 0;
-  font-size: 14px;
-}
-
-.blog .entry .entry-footer .tags li {
-  display: inline-block;
-}
-
-.blog .entry .entry-footer .tags li + li::before {
-  padding-right: 6px;
-  color: #6c757d;
-  content: ",";
-}
-
-.blog .entry .entry-footer .share {
-  font-size: 16px;
-}
-
-.blog .entry .entry-footer .share i {
-  padding-left: 5px;
-}
-
-.blog .entry-single {
-  margin-bottom: 30px;
-}
-
-.blog .entry-single .entry-title {
-  font-size: 36px;
-  line-height: 42px;
-}
-
-.blog .blog-author {
-  padding: 20px;
-  margin-bottom: 30px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-}
-
-.blog .blog-author img {
-  width: 120px;
-}
-
-.blog .blog-author h4 {
-  margin-left: 140px;
-  font-weight: 600;
-  font-size: 22px;
-  margin-bottom: 0px;
-  padding: 0;
-}
-
-.blog .blog-author .social-links {
-  margin: 0 0 5px 140px;
-}
-
-.blog .blog-author .social-links a {
-  color: #b1a0a3;
-}
-
-.blog .blog-author p {
-  margin-left: 140px;
-  font-style: italic;
-  color: #b7b7b7;
-}
-
-.blog .blog-comments {
-  margin-bottom: 30px;
-}
-
-.blog .blog-comments .comments-count {
-  font-weight: bold;
-}
-
-.blog .blog-comments .comment {
-  margin-top: 30px;
-  position: relative;
-}
-
-.blog .blog-comments .comment .comment-img {
-  width: 50px;
-}
-
-.blog .blog-comments .comment h5 {
-  margin-left: 65px;
-  font-size: 16px;
-  margin-bottom: 2px;
-}
-
-.blog .blog-comments .comment h5 a {
-  font-weight: bold;
-  color: #444444;
-  transition: 0.3s;
-}
-
-.blog .blog-comments .comment h5 a:hover {
-  color: #e43c5c;
-}
-
-.blog .blog-comments .comment h5 .reply {
-  padding-left: 10px;
-  color: #493c3e;
-}
-
-.blog .blog-comments .comment time {
-  margin-left: 65px;
-  display: block;
-  font-size: 14px;
-  color: #b1a0a3;
-  margin-bottom: 5px;
-}
-
-.blog .blog-comments .comment p {
-  margin-left: 65px;
-}
-
-.blog .blog-comments .comment.comment-reply {
-  padding-left: 40px;
-}
-
-.blog .blog-comments .reply-form {
-  margin-top: 30px;
-  padding: 30px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-}
-
-.blog .blog-comments .reply-form h4 {
-  font-weight: bold;
-  font-size: 22px;
-}
-
-.blog .blog-comments .reply-form p {
-  font-size: 14px;
-}
-
-.blog .blog-comments .reply-form input {
-  border-radius: 0;
-  padding: 20px 10px;
-  font-size: 14px;
-}
-
-.blog .blog-comments .reply-form input:focus {
-  box-shadow: none;
-  border-color: #f096a7;
-}
-
-.blog .blog-comments .reply-form textarea {
-  border-radius: 0;
-  padding: 10px 10px;
-  font-size: 14px;
-}
-
-.blog .blog-comments .reply-form textarea:focus {
-  box-shadow: none;
-  border-color: #f096a7;
-}
-
-.blog .blog-comments .reply-form .form-group {
-  margin-bottom: 25px;
-}
-
-.blog .blog-comments .reply-form .btn-primary {
-  border-radius: 0;
-  padding: 10px 20px;
-  border: 0;
-  border-radius: 50px;
-  background-color: #493c3e;
-}
-
-.blog .blog-comments .reply-form .btn-primary:hover {
-  background-color: #e43c5c;
-}
-
-.blog .blog-pagination {
-  color: #816a6e;
-}
-
-.blog .blog-pagination ul {
-  display: flex;
-  padding-left: 0;
-  list-style: none;
-}
-
-.blog .blog-pagination li {
-  border: 1px solid white;
-  margin: 0 5px;
-  transition: 0.3s;
-}
-
-.blog .blog-pagination li.active {
-  background: white;
-}
-
-.blog .blog-pagination li a {
-  color: #aaaaaa;
-  padding: 7px 16px;
-  display: inline-block;
-}
-
-.blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #e43c5c;
-  border: 1px solid #e43c5c;
-}
-
-.blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
-  color: #fff;
-}
-
-.blog .blog-pagination li.disabled {
-  background: #fff;
-  border: 1px solid white;
-}
-
-.blog .blog-pagination li.disabled i {
-  color: #f1f1f1;
-  padding: 10px 16px;
-  display: inline-block;
-}
-
-.blog .sidebar {
-  padding: 30px;
-  margin: 0 0 60px 20px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-}
-
-.blog .sidebar .sidebar-title {
-  font-size: 20px;
-  font-weight: 700;
-  padding: 0 0 0 0;
-  margin: 0 0 15px 0;
-  color: #493c3e;
-  position: relative;
-}
-
-.blog .sidebar .sidebar-item {
-  margin-bottom: 30px;
-}
-
-.blog .sidebar .search-form form {
-  background: #fff;
-  border: 1px solid #d3cacb;
-  padding: 3px 10px;
-  position: relative;
-  border-radius: 50px;
-}
-
-.blog .sidebar .search-form form input[type="text"] {
-  border: 0;
-  padding: 4px;
-  width: calc(100% - 42px);
-}
-
-.blog .sidebar .search-form form button {
-  position: absolute;
-  border-radius: 50px;
-  top: 0;
-  right: -2px;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  margin: -1px;
-  background: #e43c5c;
-  color: #fff;
-  transition: 0.3s;
-}
-
-.blog .sidebar .search-form form button:hover {
-  background: #d01d3f;
-}
-
-.blog .sidebar .categories ul {
-  list-style: none;
-  padding: 0;
-}
-
-.blog .sidebar .categories ul li + li {
-  padding-top: 10px;
-}
-
-.blog .sidebar .categories ul a {
-  color: #655356;
-}
-
-.blog .sidebar .categories ul a:hover {
-  color: #e43c5c;
-}
-
-.blog .sidebar .categories ul a span {
-  padding-left: 5px;
-  color: #b1a0a3;
-  font-size: 14px;
-}
-
-.blog .sidebar .recent-posts .post-item + .post-item {
-  margin-top: 15px;
-}
-
-.blog .sidebar .recent-posts img {
-  width: 80px;
-  float: left;
-}
-
-.blog .sidebar .recent-posts h4 {
-  font-size: 15px;
-  margin-left: 95px;
-  font-weight: bold;
-}
-
-.blog .sidebar .recent-posts h4 a {
-  color: #110e0e;
-  transition: 0.3s;
-}
-
-.blog .sidebar .recent-posts h4 a:hover {
-  color: #e43c5c;
-}
-
-.blog .sidebar .recent-posts time {
-  display: block;
-  margin-left: 95px;
-  font-style: italic;
-  font-size: 14px;
-  color: #b1a0a3;
-}
-
-.blog .sidebar .tags {
-  margin-bottom: -10px;
-}
-
-.blog .sidebar .tags ul {
-  list-style: none;
-  padding: 0;
-}
-
-.blog .sidebar .tags ul li {
-  display: inline-block;
-}
-
-.blog .sidebar .tags ul a {
-  color: #8e767a;
-  font-size: 14px;
-  padding: 6px 14px;
-  margin: 0 6px 8px 0;
-  border: 1px solid #ede9e9;
-  display: inline-block;
-  border-radius: 50px;
-  transition: 0.3s;
-}
-
-.blog .sidebar .tags ul a:hover {
-  color: #fff;
-  border: 1px solid #e43c5c;
-  background: #e43c5c;
-}
-
-.blog .sidebar .tags ul a span {
-  padding-left: 5px;
-  color: #dfd8d9;
-  font-size: 14px;
 }
 
 /*--------------------------------------------------------------
