--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1301,7 +1301,7 @@ width: 100%;
 
 #kortingInput{display:none;}
 
-.dropdown-toggle{
+.events-toggle{
   vertical-align: baseline !important;
   border: none;
 }
