--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1298,7 +1298,7 @@ width: 100%;
 	 width: 100%;
 	 height: 100%;
 	 border-radius: 10px;
-	 background-image: url("../../images/iStock-488088826 (1).jpg");
+	 background-image: url("../../images/25-35.png");
 	 background-position: bottom center;
 	 background-size: cover;
 }
@@ -1316,9 +1316,12 @@ width: 100%;
 	 cursor: pointer;
 	 transition: 0.5s;
 }
+#kortinglabel input{
+  width: 80%;
+}
 @media (min-width: 768px) {
 .events{
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 7fr 5fr;
 }
 }
 
@@ -1338,6 +1341,9 @@ width: 100%;
 .d-block{
   padding-top: 30%;
 }
+.list-group{
+  text-align: center;
+}
 .card-block {
     font-size: 1em;
     position: relative;
@@ -1347,7 +1353,15 @@ width: 100%;
     box-shadow: none;
     top: 15%
 }
-
+.testimonials-events{
+  padding-top: 50px;
+}
+.info-padding{
+  padding: 50px;
+}
+#reviews-tab, #info-tab, #events-tab{
+  color: #35c0df;
+}
 .profile-card-1 {
   position: relative;
   overflow: hidden;
@@ -1388,8 +1402,12 @@ width: 100%;
   font-size: 16px;
   margin-top:10px;
 }
-
-
+.carousel-control-prev, .carousel-control-next{
+top: 30%;
+}
+#myTab{
+justify-content: center;
+}
 .btn {
   margin-top: auto;
 }
