--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1126,6 +1126,10 @@ input[type=number]::-webkit-outer-spin-button {
 .padding-gift{
   padding-top: 25px;
 }
+.padding-giftcard{
+  padding-left: 15px;
+  padding-right: 15px;
+}
 .gift-title{
   font-size: 30px;
   color: #01add3;
