--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -360,12 +360,7 @@ text-transform: capitalize;
 .mobile-nav-active .mobile-nav-toggle i {
   color: #fff;
 }
-/*--------------------------------------------------------------
-# navigation other pages
---------------------------------------------------------------*/
-.header-pages{
-  background: linear-gradient(to bottom, #01add3 5%, #6dd5ed 100%);
-}
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -1489,10 +1484,10 @@ width: 90%
   height: 275px;
   padding:10%;
 }
-.linkFAQ{
+.linkEvents{
   color: blue;
 }
-.linkFAQ:hover{
+.linkEvents:hover{
   color: blue;
   text-decoration: underline;
 }
@@ -1506,7 +1501,7 @@ width: 90%
   color: #d0d0d0;
 }
 .hearts-percentage{
-  left: 25%;
+  left: 30%;
   position: absolute;
   top: 25%;
 }
@@ -1517,11 +1512,103 @@ width: 90%
 .fa-plus, .fa-minus{
   float: right;
 }
-
+.waaromSpeeddateStyling {
+  border: 1.5px solid lightblue;
+  margin-bottom: 20px !important;
+  background-color: white !important;
+}
+.waaromSpeeddateStyling-card{
+  background-color: white !important;
+}
+.waaromSpeeddateStyling h2 a{
+  font-size: large;
+  color: lightblue;
+}
+.waaromSpeeddateStyling h2 a:hover{
+  font-size: large;
+  color: lightblue;
+}
+.community{
+  background: linear-gradient(to bottom, #01add3 5%, #6dd5ed 100%);
+}
+.community h1{
+  width: 100%;
+  font-size: 44px;
+  text-align: center;
+  color: white;
+}
+.community p{
+  text-align: center;
+  color: white;
+  width: 100%;
+}
+.btn-styling-community{
+  float: none !important;
+  background-color: #343a40;
+  color: #f8f9fa;
+  border-color: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+@media (min-width: 375px){
+  .hearts-percentage{
+    left: 25%;
+  }
+}
+@media (min-width: 375px){
+  .hearts-percentage{
+    left: 20%;
+  }
+}
+@media (min-width: 768px){
+  .hearts-percentage{
+    left: 30%;
+  }
+  .heart-img{
+    padding: 5%;
+  }
+}
 @media  (max-width: 576px) {
   #whySpeeddate-image h2 {
     display: none;
   }
+}
+/*--------------------------------------------------------------
+# FAQ page
+--------------------------------------------------------------*/
+.FAQ-header{
+  font-size: 55px;
+}
+#FAQ-question{
+  border: 2px solid #bfe1eb;
+}
+#FAQ-question p{
+  padding-bottom: 10px;
+  font-size: 20px;
+}
+#FAQ-question h3{
+  font-weight: bold;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  color: #00b3ff;
+}
+#FAQ-question button{
+  color: white;
+  background: linear-gradient(to bottom, #01add3 5%, #6dd5ed 100%);
+  margin-bottom:10%;
+}
+#exampleFormControlTextarea1{
+  font-size: 20px;
+}
+#FAQ-question .form-group{
+  font-size: 20px;
+}
+@media  (min-width: 768px) {
+  #FAQ-question {
+    height:600px;
+ }
 }
 /*--------------------------------------------------------------
 # Footer
